# infrastructure-lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  app.py  index.html  mkdocs.yml  pyproject.toml  requirements.app.txt  requirements.txt
.github/workflows/: cloudflare-iac.yml  docker-builder.yml  eks-plan.yml  publish_docs.yml
deploy/: broken-app.service  status-api.service
deploy/k8s/: argocd-values.yaml  cluster-issuer-dns-staging.yaml  cluster-issuer-dns.yaml  redis-backup-cronjob.yaml  redis-stateful.yaml  status-api.yaml
docs/: index.md
docs/phase1/: admin-box.md  adr-001-hardening-script.md
docs/phase10/: adr-014-gitops-secrets-management-with-sealed-secrets.md  adr-015-automated-dns-management-with-external-dns.md  adr-016-zero-trust-access-with-cloudflare-tunnels.md  adr-017-argocd-self-management-and-gitops-maturity.md
docs/phase11/: adr-018-cloudflare-iac.md
docs/phase12/: adr-019-hybrid-gitops-multi-cluster-architecture.md  adr-020-eks-provisioning-finops-strategy.md  adr-021-ingress-controller-strategy-per-environment.md
docs/phase13/: adr-022-observability-strategy.md  observability.md
docs/phase2/: aws-clickops-deployment.md  network.md
docs/phase3/: containerization.md  (+1 more)
gitops/: argocd-values.yaml  values-loki.yaml  values-observability.yaml
scripts/: deploy.sh  install_argocd.sh  k3s_addons.sh  refresh_cloudflare_tunnel_credentials.sh  setup_me.sh  watchdog.py
search/: search_index.json
terraform/: compute.tf  database.tf  network.tf  outputs.tf  variables.tf
tests/: test_app.py
(+119 files in other folders)
