[project]
name = "infrastructure-lab"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "redis>=7.3.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "pytest>=9.0.2",
]
